k8s/google/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - k8sdiary.docker-compendium.info
    secretName: k8sdiary-certificate-secret
  rules:
  - host: k8sdiary.docker-compendium.info
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port:
                number: 80
